Prevent horizontal scrollbars.

--- a/_css/shared.css
+++ b/_css/shared.css
@@ -52,6 +52,14 @@
     display: block;
     transform: skew(25deg, -25deg) translate(-0.75em, 0.125em);
   }
+
+  /* SHIM: Prevent horizontal scrollbars */
+  html, body {
+    width: 100%;
+    overflow-x: hidden;
+    overflow-y: visible;
+  }
+
   /*
   @supports(transform: rotate(25deg)) {
     body > header .nav-link {
