--- a/css/shared.css
+++ b/css/shared.css
@@ -1891,6 +1891,14 @@
             transform: skew(25deg, -25deg) translate(-0.75em, 0.125em);
   }
 
+  /* SHIM: Prevent horizontal scrollbars */
+
+  html, body {
+    width: 100%;
+    overflow-x: hidden;
+    overflow-y: visible;
+  }
+
   /*
   @supports(transform: rotate(25deg)) {
     body > header .nav-link {
